--- a/css/help.css
+++ b/css/help.css
@@ -285,27 +285,27 @@ li a:hover {
   }
 
   .map-responsive {
-    padding: 100px 0px 250px 0px ;
+    padding: 100px 0px 260px 0px !important;
     overflow: hidden;
     position: relative;
     height: 0;
-    margin: 120px 10px 50px 10px;
+    margin: 120px 10px 30px 10px !important;
   }
 
   .map-responsive iframe {
-    padding-left: 10px;
-    padding-right: 50px;
-    left: 50%;
-    top: 0;
-    width: 550px;
-    height: 350px;
+    padding: 0 !important;
+    padding-right: 10px !important;
+    left: 0 !important;
+    right: 0 !important;
+    width: 92vw !important;
+    height: 220px !important;
     position: absolute;
-    margin-top: 100px;
+    margin-top: 32vw;
   }
 
   .contact {
     margin-right: 10% !important;
-    margin-left: 50px !important;
+    margin-left: 15% !important;
     margin-top: 35px;
   }
 }
@@ -354,7 +354,7 @@ li a:hover {
   overflow: hidden;
   position: relative;
   height: 0;
-  margin: 20px 10px 50px 10px;
+  margin: 20px 30px 50px 10px;
 }
 
 .map-responsive iframe {
@@ -362,7 +362,7 @@ li a:hover {
   padding-right: 50px;
   left: 50%;
   top: 0;
-  width: 550px;
+  width: 50vw;
   height: 350px;
   position: absolute;
 }
@@ -397,6 +397,7 @@ footer {
 .h1 {
   color: #e8e8e8;
   font-family: 'Rubik', sans-serif;
+  word-break: break-word;
 }
 
 .f1 {
@@ -444,10 +445,10 @@ footer {
 .contact {
   position: absolute;
   margin-right: 50%;
-  margin-left: 100px;
-  margin-top: 35px;
+  margin-left: 8%;
+  margin-top: 3%;
 }
 
 .contact p {
-  font-size: 20px;
+  font-size: 3.5vmin;
 }
