--- a/css/help.css
+++ b/css/help.css
@@ -445,8 +445,8 @@ footer {
 .contact {
   position: absolute;
   margin-right: 50%;
-  margin-left: 8%;
-  margin-top: 3%;
+  margin-left: 8vw;
+  margin-top: 2vw;
 }
 
 .contact p {
