V2 Font size update

--- a/css/help.css
+++ b/css/help.css
@@ -444,9 +444,9 @@ footer {
 
 .contact {
   position: absolute;
-  margin-right: 50%;
-  margin-left: 8vw;
-  margin-top: -1vw;
+  margin-right: 10vw;
+  margin-left: 12vw;
+  margin-top: 0vw;
 }
 
 .contact p {
