--- a/css/help.css
+++ b/css/help.css
@@ -78,7 +78,14 @@ li a:hover {
   color: #000000 !important;
 }
 
-@media only screen and (max-width: 540px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
+  /*Tablet portrait*/
+  
+  
+}
+
+@media (min-width: 768px) and (max-width: 1024px) { 
+    /*Tablet landscape*/
   .logo {
     margin-left: auto;
     margin-right: auto;
@@ -87,23 +94,23 @@ li a:hover {
 
   #a {
     display: inline;
-    float: left;
+    float: right;
     margin-top: 10px;
-    margin-left: -10px;
+    margin-left: 30px;
   }
 
   #b {
     display: inline;
-    float: left;
+    float: right;
     margin-top: 10px;
-    margin-left: -10px;
+    margin-left: 30px;
   }
 
   #c {
     display: inline;
     float: right;
     margin-top: 10px;
-    margin-right: 30px;
+    margin-right: 10px;
   }
 
   #d {
@@ -123,15 +130,30 @@ li a:hover {
 
   .map-responsive {
     margin-left: 10px !important;
-    margin-right: 10px !important;
+    margin-right: 0 !important;
+  }
+  
+  .map-responsive iframe {
+    padding-left: 0px !important;
+    padding-right: 12px !important;
   }
 
   .h1 {
     color: #000000 !important;
   }
+
+  .contact {
+    margin-left: 5vw !important;
+    margin-top: 2vw !important;
+  }
+
+  .contact p {
+    font-size: 2.3vmin !important;
+  }
 }
 
-@media only screen and (max-width: 485px) {
+@media (min-width: 481px) and (max-width: 767px) {
+  /*Smarphone*/
   span {
     display: block;
     float: right;
@@ -242,8 +264,7 @@ li a:hover {
     text-align: center;
     word-break: break-all;
     color: #000000 !important;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin: 40px 5px 0px 10px !important;
   }
 
   .omz {
@@ -289,12 +310,195 @@ li a:hover {
     overflow: hidden;
     position: relative;
     height: 0;
-    margin: 120px 10px 30px 10px !important;
+    margin: 120px 0 30px 0 !important;
   }
 
   .map-responsive iframe {
     padding: 0 !important;
-    padding-right: 10px !important;
+    padding-right: 0 !important;
+    margin-left: 4vw !important;
+    margin-right: 2vw !important;
+    left: 0 !important;
+    right: 0 !important;
+    width: 92vw !important;
+    height: 250px !important;
+    position: absolute;
+    margin-top: 240px;
+  }
+
+  .contact {
+    margin-right: 10% !important;
+    margin-left: 10% !important;
+    margin-top: 35px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+/*Smaller smartphone*/  
+  span {
+    display: block;
+    float: right;
+    color: #000000;
+    font-size: 30px;
+    margin-top: 2px;
+    margin-right: 30px;
+  }
+
+  .snav {
+    right: 0;
+    background-color: #FFFFFF;
+    height: 0;
+    width: 0;
+    z-index: 6;
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  .snav a {
+    padding: 10px;
+    color: #FFFFFF;
+    background-color: #474747;
+    border: 4px solid #333333;
+    border-radius: 10px;
+    display: block;
+    font-size: 16px;
+    font-style: normal;
+    text-align: center;
+    margin: 8px 10px 8px 0px;
+    margin-left: 15px;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .snav a:hover {
+    transition: 0.2s;
+    background-color: #898989;
+    border-color: #333333;
+  }
+
+  .home {
+    margin-top: 25px !important;
+  }
+
+  .x {
+    width: 50%;
+    height: 50%;
+  }
+
+  #snava {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: none;
+  }
+
+  .close {
+    padding: 0 !important;
+    margin-top: -5px !important;
+    float: right;
+    background-color: transparent !important;
+    border: 0px !important;
+    width: 20%;
+    height: 20%;
+    transition: transform 1s;
+  }
+
+  .close:hover {
+    background-color: transparent !important;
+    transform: rotate(360deg);
+  }
+
+  .logo {
+    width: 120px;
+    margin-left: 0px !important;
+    display: block;
+  }
+
+  header {
+    height: 75px;
+  }
+
+  body {
+    padding: 0 !important;
+  }
+
+  ul li {
+    display: none;
+  }
+
+  nav {
+    padding-bottom: 0 !important;
+  }
+
+  .head {
+    padding-top: 35px !important;
+    padding-bottom: 0 !important;
+  }
+
+  .sticky {
+    position: relative;
+  }
+
+  .sticky+.content {
+    padding-top: 0;
+  }
+
+  .h1 {
+    text-align: center;
+    word-break: break-all;
+    color: #000000 !important;
+    margin: 25px 10px 0px 10px;
+  }
+
+  .omz {
+    display: none;
+  }
+
+  .omz a {
+    display: none;
+  }
+
+  .omz h3 {
+    display: none;
+  }
+
+  .cs {
+    display: none;
+  }
+
+  .cs a {
+    display: none;
+  }
+
+  .cs h3 {
+    display: none;
+  }
+
+  footer {
+    margin-top: 0 !important;
+    padding: 0px !important;
+    height: 28px;
+  }
+
+  .copy {
+    margin: 0 !important;
+  }
+
+  .copy p {
+    font-size: 10px;
+  }
+
+  .map-responsive {
+    padding: 100px 0px 400px 0px !important;
+    overflow: hidden;
+    position: relative;
+    height: 0;
+    margin: 120px 0px 30px 0px !important;
+  }
+
+  .map-responsive iframe {
+    padding: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 4vw !important;
+    margin-right: 2vw !important;
     left: 0 !important;
     right: 0 !important;
     width: 92vw !important;
@@ -304,9 +508,7 @@ li a:hover {
   }
 
   .contact {
-    margin-right: 0 !important;
-    margin-left: 0 !important;
-    margin-top: 35px;
+    margin: 10px 3% 0 3% !important;
   }
 }
 
@@ -316,7 +518,6 @@ li a:hover {
 
 .head {
   padding-top: 80px;
-  padding-left: 10px;
   padding-bottom: 30px;
   color: #000000;
   font-family: 'Rubik', sans-serif;
@@ -336,16 +537,9 @@ li a:hover {
   weight: 40px;
 }
 
-.lineone {
-  margin-left: 350px;
-  margin-right: 350px;
-  color: black;
-  margin-bottom: -30px;
-}
-
 .linetwo {
-  margin-left: 350px;
-  margin-right: 350px;
+  margin-left: 25vw;
+  margin-right: 25vw;
   color: black;
 }
 
