--- a/css/help.css
+++ b/css/help.css
@@ -142,14 +142,6 @@ li a:hover {
     color: #000000 !important;
   }
 
-  .contact {
-    margin-left: 5vw !important;
-    margin-top: 2vw !important;
-  }
-
-  .contact p {
-    font-size: 2.3vmin !important;
-  }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -638,8 +630,8 @@ footer {
 
 .contact {
   position: absolute;
-  margin-right: 10vw;
-  margin-left: 12vw;
+  margin-right: 50%;
+  margin-left: 5%;
   margin-top: 0vw;
   z-index: 1;
 }
