--- a/css/help.css
+++ b/css/help.css
@@ -475,7 +475,7 @@ li a:hover {
     overflow: hidden;
     position: relative;
     height: 0;
-    margin: 120px 0px 30px 0px !important;
+    margin: 180px 0px 30px 0px !important;
   }
 
   .map-responsive iframe {
@@ -492,7 +492,7 @@ li a:hover {
   }
 
   .contact {
-    margin: 10px 3% 0 3% !important;
+    margin: 10px 20% 0 20% !important;
   }
 }
 
@@ -528,21 +528,14 @@ li a:hover {
 }
 
 .map-responsive {
-  padding: 100px 0px 250px 0px ;
   overflow: hidden;
   position: relative;
-  height: 0;
-  margin: 20px 30px 50px 10px;
+  margin: 50px 5% 30px 50% !important;
 }
 
 .map-responsive iframe {
-  padding-left: 10px;
-  padding-right: 50px;
-  left: 50%;
-  top: 0;
-  width: 50vw;
-  height: 350px;
-  position: absolute;
+  width: 100%;
+  height: 400px;
 }
 
 .co {
@@ -622,9 +615,7 @@ footer {
 
 .contact {
   position: absolute;
-  margin-right: 50%;
-  margin-left: 5%;
-  margin-top: 0vw;
+  margin: 10px 15% 0 12%;
   z-index: 1;
 }
 
