--- a/css/help.css
+++ b/css/help.css
@@ -128,10 +128,11 @@ li a:hover {
     padding-bottom: 20px;
   }
 
-  .map-responsive {
-    margin-left: 10px !important;
-    margin-right: 0 !important;
-  }
+.map-responsive {
+  overflow: hidden;
+  position: relative;
+  margin: 50px 5% 30px 50%;
+}
   
   .map-responsive iframe {
     padding-left: 0px !important;
@@ -294,30 +295,26 @@ li a:hover {
   }
 
   .map-responsive {
-    padding: 100px 0px 400px 0px !important;
+    padding: 100px 0px 500px 0px !important;
     overflow: hidden;
     position: relative;
     height: 0;
-    margin: 120px 0 30px 0 !important;
+    margin: 180px 5% 30px 5% !important;
   }
 
   .map-responsive iframe {
-    padding: 0 !important;
-    padding-right: 0 !important;
-    margin-left: 4vw !important;
-    margin-right: 2vw !important;
-    left: 0 !important;
-    right: 0 !important;
-    width: 92vw !important;
-    height: 250px !important;
-    position: absolute;
-    margin-top: 240px;
+    margin: 200px 0 0 0 !important;
+    width: 80% !important;
+    height: 300px !important;
+    position: relative;
   }
 
   .contact {
-    margin-right: 20% !important;
-    margin-left: 20% !important;
-    margin-top: 35px;
+    padding-left: 21% !important;
+    padding-right: 21% !important;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+    margin-top: 20px !important;
   }
 }
 
@@ -415,6 +412,7 @@ li a:hover {
   .head {
     padding-top: 35px !important;
     padding-bottom: 0 !important;
+    padding-right: 10%;
   }
 
   .sticky {
@@ -429,7 +427,7 @@ li a:hover {
     text-align: center;
     word-break: break-all;
     color: #000000 !important;
-    margin: 25px 10px 0px 10px;
+    margin: 50px 10px 0px 10px;
   }
 
   .omz {
@@ -471,28 +469,26 @@ li a:hover {
   }
 
   .map-responsive {
-    padding: 100px 0px 400px 0px !important;
+    padding: 100px 0px 500px 0px !important;
     overflow: hidden;
     position: relative;
     height: 0;
-    margin: 180px 0px 30px 0px !important;
+    margin: 180px 5% 30px 5% !important;
   }
 
   .map-responsive iframe {
-    padding: 0 !important;
-    padding-right: 0 !important;
-    margin-left: 4vw !important;
-    margin-right: 2vw !important;
-    left: 0 !important;
-    right: 0 !important;
-    width: 92vw !important;
-    height: 220px !important;
-    position: absolute;
-    margin-top: 270px;
+    margin: 200px 0 0 0 !important;
+    width: 80% !important;
+    height: 300px !important;
+    position: relative;
   }
 
   .contact {
-    margin: 10px 20% 0 20% !important;
+    padding-left: 21% !important;
+    padding-right: 21% !important;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+    margin-top: 20px !important;
   }
 }
 
@@ -530,7 +526,7 @@ li a:hover {
 .map-responsive {
   overflow: hidden;
   position: relative;
-  margin: 50px 5% 30px 50% !important;
+  margin: 50px 5% 30px 50%;
 }
 
 .map-responsive iframe {
