--- a/css/bapll.css
+++ b/css/bapll.css
@@ -274,8 +274,6 @@ li a:hover {
 
 .head {
   padding-top: 80px;
-  padding-left: 10px;
-  padding-bottom: 30px;
   color: #000000;
   font-family: 'Rubik', sans-serif;
   text-align: center;
@@ -301,6 +299,7 @@ li a:hover {
   padding-right: 40px;
   padding-top: 15px;
   padding-bottom: 15px;
+  transition: color 800ms;
 }
 
 .co:hover {
@@ -380,4 +379,97 @@ footer {
 
 .title p {
   margin: 12px 0 15px 0;
+}
+
+.sec1 {
+  padding-bottom: 300px;
+}
+
+.sec1 h1 {
+  margin-top: 150px;
+  position: relative;
+  display: inline-block
+}
+
+.sec2 {
+  padding-top: 10%;
+  margin-bottom: 5%;
+}
+
+.sec2 img {
+  width: 300px;
+  height: 250px;
+  position: relative;
+  display: inline-block;
+}
+
+.sec2 p {
+  font-size: 18px;
+  margin-left: 25%;
+  position: relative;
+  display: inline-block;
+
+}
+
+.left {
+  margin-left: 10px;
+  display: inline-block;
+}
+
+.left p {
+  margin-left: 0 !important;
+}
+
+.right {
+  margin-left: 20%;
+  margin-right: 10px;
+  display: inline-block;
+}
+
+.right p {
+  margin-left: 0 !important;
+}
+
+.right img {
+  width: 300px;
+  height: 250px;
+  position: relative;
+  display: inline-block;
+}
+
+.sec3 {
+  padding-top: 30px;
+  padding-bottom: 50px;
+  margin-bottom: 0 !important;
+  background-color: #2c2c2c;
+}
+
+.sec3 h3 {
+  color: #dddddd;
+  font-family: Arial;
+  margin-bottom: 20px !important;
+}
+
+.sec3 h4 {
+  margin-bottom: 0 !important;
+  color: #dddddd;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  position: relative;
+  display: inline-block;
+}
+
+.sec3 p {
+  margin-bottom: 0 !important;
+  color: #dddddd;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: 20px;
+  text-align: left;
+  position: relative;
+  display: inline-block;
+}
+
+.bk {
+  background-color: #666666;
+  padding-top: 8px;
 }
