--- a/css/bapll.css
+++ b/css/bapll.css
@@ -277,6 +277,17 @@ li a:hover {
   color: #000000;
   font-family: 'Rubik', sans-serif;
   text-align: center;
+  animation: transitionIn 700ms;
+}
+
+@keyframes  transitionIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .head a {
