--- a/css/help.css
+++ b/css/help.css
@@ -59,11 +59,6 @@ nav li {
   z-index: 1;
 }
 
-.logo:hover {
-  transition: transform 0.1s linear;
-  transform: scale(1.05);
-}
-
 li a {
   text-decoration: none;
   color: #000000;
@@ -75,6 +70,7 @@ li a {
   font-size: 13pt;
   transition: 350ms linear;
   border-radius: 2px;
+  margin-bottom: 15px;
 }
 
 li a:hover {
@@ -600,6 +596,7 @@ li a:hover {
 }
 
 footer {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #474747;
   position: absolute;
   left: 0;
@@ -609,8 +606,7 @@ footer {
 
 .h1 {
   color: #e8e8e8;
-  font-family: 'Rubik', sans-serif;
-  word-break: break-word;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .f1 {
@@ -621,9 +617,7 @@ footer {
 }
 
 .f1:hover {
-  transition: border-bottom 0.1s linear;
-  border-bottom: 3.5px solid white;
-  position: static;
+  text-decoration: underline;
 }
 
 .omz {
