--- a/css/index.css
+++ b/css/index.css
@@ -50,11 +50,6 @@ nav li {
   z-index: 1;
 }
 
-.logo:hover {
-  transition: transform 0.1s linear;
-  transform: scale(1.05);
-}
-
 li a {
   text-decoration: none;
   color: #000000;
@@ -66,6 +61,7 @@ li a {
   font-size: 13pt;
   transition: 350ms linear;
   border-radius: 2px;
+  margin-bottom: 15px;
 }
 
 li a:hover {
@@ -349,6 +345,7 @@ li a:hover {
 }
 
 footer {
+  font-family: Arial, Helvetica, sans-serif;
   background-color: #474747;
   position: absolute;
   left: 0;
@@ -358,7 +355,7 @@ footer {
 
 .h1 {
   color: #e8e8e8;
-  font-family: 'Rubik', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .f1 {
@@ -369,9 +366,7 @@ footer {
 }
 
 .f1:hover {
-  transition: border-bottom 0.1s linear;
-  border-bottom: 3.5px solid white;
-  position: static;
+  text-decoration: underline;
 }
 
 .omz {
