--- a/css/bapll.css
+++ b/css/bapll.css
@@ -78,7 +78,14 @@ li a:hover {
   color: #000000 !important;
 }
 
-@media only screen and (max-width: 540px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
+  /*Tablet portrait*/
+  
+  
+}
+
+@media (min-width: 768px) and (max-width: 1024px) { 
+    /*Tablet landscape*/
   .logo {
     margin-left: auto;
     margin-right: auto;
@@ -87,23 +94,23 @@ li a:hover {
 
   #a {
     display: inline;
-    float: left;
+    float: right;
     margin-top: 10px;
-    margin-left: -10px;
+    margin-left: 30px;
   }
 
   #b {
     display: inline;
-    float: left;
+    float: right;
     margin-top: 10px;
-    margin-left: -10px;
+    margin-left: 30px;
   }
 
   #c {
     display: inline;
     float: right;
     margin-top: 10px;
-    margin-right: 30px;
+    margin-right: 10px;
   }
 
   #d {
@@ -120,13 +127,164 @@ li a:hover {
   nav {
     padding-bottom: 20px;
   }
-
+  
   .h1 {
     color: #000000 !important;
   }
 }
 
-@media only screen and (max-width: 485px) {
+@media (min-width: 481px) and (max-width: 767px) {
+  /*Smarphone*/
+  span {
+    display: block;
+    float: right;
+    color: #000000;
+    font-size: 30px;
+    margin-top: 2px;
+    margin-right: 30px;
+  }
+
+  .snav {
+    right: 0;
+    background-color: #FFFFFF;
+    height: 0;
+    width: 0;
+    z-index: 6;
+    position: absolute;
+    transition: 0.3s;
+  }
+
+  .snav a {
+    padding: 10px;
+    color: rgb(0, 0, 0);
+    background-color: #FFFFFF;
+    display: block;
+    margin: 10px 0 10px 0;
+    font-size: 20px;
+    font-style: bold;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .snav a:hover {
+    transition: 0.2s;
+    background-color: #d6d6d6;
+  }
+
+  .home {
+    margin-top: 25px !important;
+  }
+
+  .x {
+    width: 50%;
+    height: 50%;
+  }
+
+  #snava {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    display: none;
+  }
+
+  .close {
+    padding: 0 !important;
+    margin-top: -5px !important;
+    float: right;
+    background-color: transparent !important;
+    border: 0px !important;
+    width: 20%;
+    height: 20%;
+    transition: transform 1s;
+  }
+
+  .close:hover {
+    background-color: transparent !important;
+    transform: rotate(360deg);
+  }
+
+  .logo {
+    width: 120px;
+    margin-left: 0px !important;
+    display: block;
+  }
+
+  header {
+    height: 75px;
+  }
+
+  body {
+    padding: 0 !important;
+  }
+
+  ul li {
+    display: none;
+  }
+
+  nav {
+    padding-bottom: 0 !important;
+  }
+
+  .head {
+    padding-top: 35px !important;
+    padding-bottom: 0 !important;
+  }
+
+  .sticky {
+    position: relative;
+  }
+
+  .sticky+.content {
+    padding-top: 0;
+  }
+
+  .h1 {
+    text-align: center;
+    word-break: break-all;
+    color: #000000 !important;
+    margin: 40px 5px 0px 10px !important;
+  }
+
+  .omz {
+    display: none;
+  }
+
+  .omz a {
+    display: none;
+  }
+
+  .omz h3 {
+    display: none;
+  }
+
+  .cs {
+    display: none;
+  }
+
+  .cs a {
+    display: none;
+  }
+
+  .cs h3 {
+    display: none;
+  }
+
+  footer {
+    margin-top: 0 !important;
+    padding: 0px !important;
+    height: 28px;
+  }
+
+  .copy {
+    margin: 0 !important;
+  }
+
+  .copy p {
+    font-size: 10px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+/*Smaller smartphone*/  
   span {
     display: block;
     float: right;
@@ -217,7 +375,7 @@ li a:hover {
   }
 
   .head {
-    padding-top: 100px !important;
+    padding-top: 35px !important;
     padding-bottom: 0 !important;
   }
 
@@ -227,6 +385,13 @@ li a:hover {
 
   .sticky+.content {
     padding-top: 0;
+  }
+
+  .h1 {
+    text-align: center;
+    word-break: break-all;
+    color: #000000 !important;
+    margin: 50px 10px 0px 10px;
   }
 
   .omz {
