--- a/css/bapll.css
+++ b/css/bapll.css
@@ -536,7 +536,7 @@ footer {
 
 .bapllon2{
     float: right;
-    width: 1000px;
+    width: 60%;
     height: auto;
     
 }
@@ -667,13 +667,12 @@ footer {
 }
 
 #navbar ul li ul {
+  font-family: 'Rubik', sans-serif;
   display: none;
   position: absolute;
   background-color: #fff;
-  padding: 0;
   margin-top: 40px;
   right: 175px;
-  box-shadow: 0px 10px 50px 0px rgba(0,0,0,0);
 }
 
 #navbar ul li:hover ul {
@@ -682,5 +681,7 @@ footer {
 }
 
 #navbar ul li ul li a {
-  padding: 10px 20px;
+  display: inline-block;
+  position: relative;
+  margin: 0px;
 }
