--- a/css/help.css
+++ b/css/help.css
@@ -97,13 +97,12 @@ li a:hover {
 }
 
 #navbar ul li ul {
+  font-family: 'Rubik', sans-serif;
   display: none;
   position: absolute;
   background-color: #fff;
-  padding: 0;
   margin-top: 40px;
   right: 175px;
-  box-shadow: 0px 10px 50px 0px rgba(0,0,0,0);
 }
 
 #navbar ul li:hover ul {
@@ -112,7 +111,9 @@ li a:hover {
 }
 
 #navbar ul li ul li a {
-  padding: 10px 20px;
+  display: inline-block;
+  position: relative;
+  margin: 0px;
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
