--- a/css/index.css
+++ b/css/index.css
@@ -88,13 +88,12 @@ li a:hover {
 }
 
 #navbar ul li ul {
+  font-family: 'Rubik', sans-serif;
   display: none;
   position: absolute;
   background-color: #fff;
-  padding: 0;
   margin-top: 40px;
   right: 175px;
-  box-shadow: 0px 10px 50px 0px rgba(0,0,0,0);
 }
 
 #navbar ul li:hover ul {
@@ -103,7 +102,9 @@ li a:hover {
 }
 
 #navbar ul li ul li a {
-  padding: 10px 20px;
+  display: inline-block;
+  position: relative;
+  margin: 0px;
 }
 
 @media only screen and (max-width: 540px) {
