--- a/css/bapll.css
+++ b/css/bapll.css
@@ -458,13 +458,15 @@ li a:hover {
   color: #1d0e72;
 }
 
-.co {
-  background-color: #474747;
+.sect {
+  background-color: #676767;
   border: none;
   color: #FFFFFF;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: block;
+  margin: auto;
+  border-radius: 5px;
   font-size: 18px;
   padding-left: 40px;
   padding-right: 40px;
@@ -474,7 +476,12 @@ li a:hover {
   cursor: pointer;
 }
 
-.co:hover {
+.sect i {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.sect:hover {
   transition: background-color 200ms linear;
   color: #ffffff;
   background-color: #747474;
@@ -555,7 +562,7 @@ footer {
 
 .sec1 {
   margin-left: 50px;
-  padding-bottom: 300px;
+  padding-bottom: 220px;
 }
 
 .sec1 h1 {
@@ -568,29 +575,14 @@ footer {
   margin-top: 100px;
   font-family: Arial, Helvetica, sans-serif;
 }
-/**
-.sec2 h1 {
-  text-shadow: 2px 5px 5px black;
-}
 
-.sec2 p {
-  text-shadow: 2px 5px 5px black;
-  font-size: 20px;
-}
-**/
-.sec3 {
-  padding-top: 10%;
-  margin-bottom: 5%;
-}
-
-.sec3 img {
-  width: 300px;
-  height: 250px;
+.sec2 img {
+  width: 30%;
   position: relative;
   display: inline-block;
 }
 
-.sec3 p {
+.sec2 p {
   font-size: 18px;
   position: relative;
   display: inline-block;
@@ -621,6 +613,21 @@ footer {
   height: 250px;
   position: relative;
   display: inline-block;
+}
+
+.sec3 {
+  max-height: 0;
+  overflow: hidden;
+  background-color: #2c2c2c;
+  transition: 0.5s;
+}
+
+.sec3 img{
+  cursor: pointer;
+  width: 15%;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-radius: 5px;
 }
 
 .sec4 {
@@ -656,38 +663,53 @@ footer {
 }
 
 .sec5 {
+  margin-top: 50px !important;
   margin: 20px;
   display: grid;
+  grid-gap: 10px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
 }
 
 .sec5 img{
+  width: 100%;
   grid-column: 1/1;
   grid-row: 1/2; 
 }
 
 .sec5 h1 {
-  margin-top: 100px;
+  margin-top: 0;
 }
 
 .sec5 p{
-  margin-top: 200px;
+  margin-top: 20%;
   font-size: 18px;
 }
 
+.sec6 {
+  margin: 10px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 0.5fr 1fr 0.5fr;
+}
+
 .sec6 img {
-  height: 180px;
-  width: 180px;
-  margin-left: 20px;
+  width: 100%;
   border-radius: 50%;
+  margin-bottom: 15px;
+  grid-row: 2/2;
+}
+
+.sec6 h1 {
+  grid-row: 1/1;
+  grid-column: 2/6;
 }
 
 .sec6 p {
-  grid-row: 2/2;
+  grid-row: 3/3;
   position: relative;
   display: inline;
-  margin-top: 10px;
 }
 
 .t1 {
