--- a/css/bapll.css
+++ b/css/bapll.css
@@ -569,6 +569,7 @@ footer {
 }
 
 .sec1 p {
+  margin: 0 15% 0 15%;
   grid-column: 1/1;
   grid-row: 2/2;
 }
@@ -576,9 +577,7 @@ footer {
 .sec1 h1 {
   grid-column: 1/1;
   grid-row: 1/1;
-  margin-top: 150px;
-  position: relative;
-  display: inline-block
+  align-self: end;
 }
 
 .sec2 {
