--- a/css/help.css
+++ b/css/help.css
@@ -167,27 +167,10 @@ li a:hover {
     padding-bottom: 20px;
   }
 
-  .map-responsive {
-    overflow: hidden;
-   position: relative;
-   margin: 50px 5% 30px 50%;
-  }
-  
-  .map-responsive iframe {
-    padding-left: 0px !important;
-    padding-right: 12px !important;
-  }
-
   .h1 {
     color: #000000 !important;
   }
 
-    .contact {
-    padding-left: 5% !important;
-    padding-right: 5% !important;
-    margin-left: 5% !important;
-    margin-right: 5% !important;
-  }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -339,28 +322,45 @@ li a:hover {
     font-size: 10px;
   }
 
-  .map-responsive {
-    padding: 100px 0px 500px 0px !important;
-    overflow: hidden;
-    position: relative;
-    height: 0;
-    margin: 180px 5% 30px 5% !important;
+  .sec1 {
+    margin: 20px;
+    display: grid;
+    grid-template-columns: 1fr !important;
+    grid-template-rows: 130px 90px 50px 60px 60px 60px 160px !important;
+    justify-items: center;
   }
 
-  .map-responsive iframe {
-    margin: 200px 0 0 0 !important;
-    width: 80% !important;
-    height: 300px !important;
-    position: relative;
+  .sec1 iframe {
+    grid-row: 7/7 !important;
+    grid-column: 1/1 !important;
+  }
+  
+  .sec1 h1 {
+    grid-row: 1/1 !important;
+    grid-column: 1/1 !important;
+  }
+  
+  .sec1 a {
+    grid-row: 6/6 !important;
+    grid-column: 1/1;
+  }
+  
+  .add {
+    grid-row: 2/2 !important;
+  }
+  
+  .pn {
+    grid-row: 3/3 !important;
+  }
+  
+  .pns {
+    grid-row: 4/4 !important;
+  }
+  
+  .e {
+    grid-row: 5/5 !important;
   }
 
-  .contact {
-    padding-left: 15% !important;
-    padding-right: 15% !important;
-    margin-left: 8% !important;
-    margin-right: 10% !important;
-    margin-top: 20px !important;
-  }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -512,28 +512,45 @@ li a:hover {
     font-size: 10px;
   }
 
-  .map-responsive {
-    padding: 100px 0px 500px 0px !important;
-    overflow: hidden;
-    position: relative;
-    height: 0;
-    margin: 180px 5% 30px 5% !important;
+  .sec1 {
+    margin: 20px;
+    display: grid;
+    grid-template-columns: 1fr !important;
+    grid-template-rows: 130px 90px 50px 60px 60px 60px 200px !important;
+    justify-items: center;
   }
 
-  .map-responsive iframe {
-    margin: 200px 0 0 0 !important;
-    width: 80% !important;
-    height: 300px !important;
-    position: relative;
+  .sec1 iframe {
+    grid-row: 7/7 !important;
+    grid-column: 1/1 !important;
+  }
+  
+  .sec1 h1 {
+    grid-row: 1/1 !important;
+    grid-column: 1/1 !important;
+  }
+  
+  .sec1 a {
+    grid-row: 6/6 !important;
+    grid-column: 1/1;
+  }
+  
+  .add {
+    grid-row: 2/2 !important;
+  }
+  
+  .pn {
+    grid-row: 3/3 !important;
+  }
+  
+  .pns {
+    grid-row: 4/4 !important;
+  }
+  
+  .e {
+    grid-row: 5/5 !important;
   }
 
-  .contact {
-    padding-left: 15% !important;
-    padding-right: 15% !important;
-    margin-left: 8% !important;
-    margin-right: 10% !important;
-    margin-top: 20px !important;
-  }
 }
 
 .cu {
@@ -565,18 +582,6 @@ li a:hover {
   margin-left: 25vw;
   margin-right: 25vw;
   color: black;
-}
-
-.map-responsive {
-  overflow: hidden;
-  position: relative;
-  margin: 50px 5% 30px 50%;
-  flex: 50%;
-}
-
-.map-responsive iframe {
-  width: 100%;
-  height: 400px;
 }
 
 .co {
@@ -652,13 +657,45 @@ footer {
   margin-top: 110px;
 }
 
-.contact {
-  position: absolute;
-  margin: 10px 15% 0 12%;
-  z-index: 1;
-  flex: 50%;
+.sec1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px 60px 100px 60px 60px 60px 60px 90px;
 }
 
-.contact p {
-  font-size: 22px;
+.sec1 iframe {
+  width: 90%;
+  height: 90%;
+  grid-row: 2/9;
+  grid-column: 2/2;
+}
+
+.sec1 h1 {
+  grid-row: 1/1;
+  grid-column: 1/3;
+}
+
+.sec1 a {
+  grid-row: 7/7;
+  grid-column: 1/1;
+}
+
+.add {
+  grid-row: 3/3 ;
+  grid-column: 1/1;
+}
+
+.pn {
+  grid-row: 4/4;
+  grid-column: 1/1;
+}
+
+.pns {
+  grid-row: 5/5 ;
+  grid-column: 1/1;
+}
+
+.e {
+  grid-row: 6/6 ;
+  grid-column: 1/1;
 }
