--- a/css/help.css
+++ b/css/help.css
@@ -131,31 +131,25 @@ li a:hover {
     display: block;
   }
 
-  #a {
-    display: inline;
-    float: right;
+  #navbar ul li a {
     margin-top: 10px;
+    float: right;
+    display: inline;
+  }
+
+  #a {
     margin-left: 30px;
   }
 
   #b {
-    display: inline;
-    float: right;
-    margin-top: 10px;
     margin-left: 30px;
   }
 
   #c {
-    display: inline;
-    float: right;
-    margin-top: 10px;
     margin-right: 10px;
   }
 
   #d {
-    display: inline;
-    float: right;
-    margin-top: 10px;
     margin-right: 30px;
   }
 
@@ -575,7 +569,6 @@ li a:hover {
 
 .wsl {
   height: 40px;
-  weight: 40px;
 }
 
 .linetwo {
