--- a/css/help.css
+++ b/css/help.css
@@ -355,6 +355,29 @@ li a:hover {
     grid-row: 5/5 !important;
   }
 
+  .nsect {
+    width: 100%;
+    height: 100%;
+    border: 0;  
+    padding: 10px;
+    color: rgb(0, 0, 0);
+    background-color: #FFFFFF;
+    display: block;
+    margin: 10px 0 10px 0 !important;
+    font-size: 20px;
+    font-style: normal;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .nsec {
+    display: none;
+  }
+  
+  .nsec a {
+    background-color: #ebebeb;
+  }
+
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -543,6 +566,28 @@ li a:hover {
   
   .e {
     grid-row: 5/5 !important;
+  }
+
+  .nsect {
+    width: 100%;
+    border: 0;  
+    padding: 10px;
+    color: rgb(0, 0, 0);
+    background-color: #FFFFFF;
+    display: block;
+    margin: 10px 0 10px 0 !important;
+    font-size: 18px;
+    font-style: normal;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .nsec {
+    display: none;
+  }
+
+  .nsec a {
+    background-color: #ebebeb;
   }
 
 }
