--- a/css/bapll.css
+++ b/css/bapll.css
@@ -672,12 +672,12 @@ li a:hover {
   }
 
   .sec6 {
-    grid-template-columns: 1fr !important;
-    grid-row: auto auto auto auto auto auto auto auto auto auto auto auto auto !important;
+    grid-template-columns: 1fr 1fr!important;
+    grid-row: auto auto auto auto auto auto !important;
   }
 
   .sec6 h1 {
-    grid-column: 1/1 !important;
+    grid-column: 1/3 !important;
     grid-row: 1/1 !important;
   }
 
@@ -692,53 +692,53 @@ li a:hover {
   }
 
   .acpi {
-    grid-column: 1/1 !important;
-    grid-row: 4/4 !important;
+    grid-column: 2/2 !important;
+    grid-row: 2/2 !important;
   }
 
   .acp {
-    grid-column: 1/1 !important;
-    grid-row: 5/5 !important;
+    grid-column: 2/2 !important;
+    grid-row: 3/3 !important;
   }
 
   .npyi {
     grid-column: 1/1 !important;
-    grid-row: 6/6 !important;
+    grid-row: 4/4 !important;
   }
 
   .npy {
     grid-column: 1/1 !important;
-    grid-row: 7/7 !important;
+    grid-row: 5/5 !important;
   }
 
   .cupi {
-    grid-column: 1/1 !important;
-    grid-row: 8/8 !important;
+    grid-column: 2/2 !important;
+    grid-row: 4/4 !important;
   }
 
   .cup {
-    grid-column: 1/1 !important;
-    grid-row: 9/9 !important;
+    grid-column: 2/2 !important;
+    grid-row: 5/5 !important;
   }
 
   .scpi {
     grid-column: 1/1 !important;
-    grid-row: 10/10 !important;
+    grid-row: 6/6 !important;
   }
 
   .scp {
     grid-column: 1/1 !important;
-    grid-row: 11/11 !important;
+    grid-row: 7/7 !important;
   }
 
   .msgi {
-    grid-column: 1/1 !important;
-    grid-row: 12/12 !important;
+    grid-column: 2/2 !important;
+    grid-row: 6/6 !important;
   }
 
   .msg {
-    grid-column: 1/1 !important;
-    grid-row: 13/13 !important;
+    grid-column: 2/2 !important;
+    grid-row: 7/7 !important;
   }
 
   .nsect {
