--- a/css/bapll.css
+++ b/css/bapll.css
@@ -33,10 +33,6 @@ body {
   overflow-x: hidden;
 }
 
-nav li {
-  display: inline;
-}
-
 .alg {
   width: 120px;
   display: block;
@@ -48,6 +44,7 @@ nav li {
   cursor: pointer;
   position: absolute;
   z-index: 1;
+  margin: 15px 0px 0px 15px;
 }
 
 li a {
@@ -59,18 +56,103 @@ li a {
   padding: 10px;
   float: right;
   font-size: 13pt;
-  transition: 350ms linear;
   border-radius: 2px;
-  margin-bottom: 15px;
 }
 
-li a:hover {
+#navbar ul{
+  margin-right: 10px;
+  float: right;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: auto;
+}
+
+nav li {
+  display: inline;
+}
+
+.a {
+  justify-self: center;
+  align-self: center;
+  grid-column: 4/4;
+  grid-row: 1/1;
+}
+
+.b {
+  justify-self: center;
+  align-self: center;
+  grid-column: 3/3;
+  grid-row: 1/1;
+}
+
+.drop {
+  justify-self: center;
+  align-self: center;
+  grid-column: 2/2;
+  grid-row: 1/1;
+}
+
+.d {
+  justify-self: center;
+  align-self: center;
+  grid-column: 1/1;
+  grid-row: 1/1;
+}
+
+.dropbtn {
+  border: 0;
+  background-color: #fff;
+  text-decoration: none;
+  color: #000000;
+  font-family: 'Rubik', sans-serif;
+  display: inline;
+  z-index: 1;
+  padding: 10px;
+  float: right;
+  font-size: 13pt;
+  border-radius: 2px;
+  transition: 350ms linear;
+}
+
+.navbar a:hover, .drop:hover .dropbtn {
   transition: 350ms linear;
   background-color: #c5c5c5;
 }
 
-.h1 {
-  color: #000000 !important;
+.drop-content {
+  display: none;
+  position: absolute;
+  margin-top: 40px;
+  z-index: 1;
+  background-color: white;
+  border-radius: 2px;
+}
+
+.drop {
+  overflow: hidden;
+}
+
+.drop-content a:hover {
+  transition: 350ms linear;
+  background-color: rgb(241, 241, 241);
+}
+
+.drop-content a {
+  text-decoration: none;
+  color: #000000;
+  font-family: 'Rubik', sans-serif;
+  display: block;
+  text-align: left;
+  padding: 10px;
+  float: right;
+  font-size: 13pt;
+  border-radius: 2px;
+  float: none;
+  transition: 350ms linear;
+}
+
+.drop:hover .drop-content {
+  display: block;
 }
 
 @media (min-width: 1025px) and (max-width: 1280px) {
@@ -135,7 +217,7 @@ li a:hover {
     float: right;
     color: #000000;
     font-size: 30px;
-    margin-top: 2px;
+    margin-top: 15px;
     margin-right: 30px;
   }
 
@@ -211,12 +293,8 @@ li a:hover {
     padding: 0 !important;
   }
 
-  ul li {
+  ul li, ul div {
     display: none;
-  }
-
-  nav {
-    padding-bottom: 0 !important;
   }
 
   .head {
@@ -240,27 +318,11 @@ li a:hover {
   }
 
   .omz {
-    display: none;
-  }
-
-  .omz a {
-    display: none;
-  }
-
-  .omz h3 {
-    display: none;
+    display: none !important;
   }
 
   .cs {
-    display: none;
-  }
-
-  .cs a {
-    display: none;
-  }
-
-  .cs h3 {
-    display: none;
+    display: none !important;
   }
 
   footer {
@@ -454,7 +516,7 @@ li a:hover {
     float: right;
     color: #000000;
     font-size: 30px;
-    margin-top: 2px;
+    margin-top: 15px;
     margin-right: 30px;
   }
 
@@ -516,12 +578,6 @@ li a:hover {
     transform: rotate(360deg);
   }
 
-  .logo {
-    width: 120px;
-    margin-left: 0px !important;
-    display: block;
-  }
-
   header {
     height: 75px;
   }
@@ -530,12 +586,8 @@ li a:hover {
     padding: 0 !important;
   }
 
-  ul li {
+  ul li, ul div {
     display: none;
-  }
-
-  nav {
-    padding-bottom: 0 !important;
   }
 
   .head {
@@ -559,27 +611,11 @@ li a:hover {
   }
 
   .omz {
-    display: none;
-  }
-
-  .omz a {
-    display: none;
-  }
-
-  .omz h3 {
-    display: none;
+    display: none !important;
   }
 
   .cs {
-    display: none;
-  }
-
-  .cs a {
-    display: none;
-  }
-
-  .cs h3 {
-    display: none;
+    display: none !important;
   }
 
   footer {
@@ -755,6 +791,10 @@ li a:hover {
     font-family: 'Lato', sans-serif;
   }
 
+  .nsec a {
+    margin: 0;
+  }
+
   .nsec {
     display: none;
   }
@@ -763,10 +803,6 @@ li a:hover {
     background-color: #ebebeb;
   }
 
-}
-
-.cu {
-  margin-right: 50px !important;
 }
 
 .head {
@@ -1000,7 +1036,12 @@ footer {
   width: 15%;
   margin-top: 50px;
   margin-bottom: 50px;
+  margin-left: 20px;
   border-radius: 5px;
+}
+
+.shp {
+  margin-bottom: 60px !important;
 }
 
 .sec4 {
@@ -1111,6 +1152,7 @@ footer {
 }
 
 #navbar ul li ul {
+  grid-template-rows: auto auto;
   font-family: 'Rubik', sans-serif;
   display: none;
   position: absolute;
@@ -1118,15 +1160,13 @@ footer {
   margin-top: 40px;
   right: 175px;
   padding: 0;
+  justify-items: center;
 }
 
 #navbar ul li:hover ul {
-  display: block;
-  transition: 500ms linear;
+  display: grid;
 }
 
 #navbar ul li ul li a {
-  display: inline-block;
-  position: relative;
   margin: 0px;
 }
