--- a/css/bapll.css
+++ b/css/bapll.css
@@ -188,57 +188,10 @@ nav ul li:hover {
 
 @media (min-width: 1025px) and (max-width: 1280px) {
   /*Tablet portrait*/
-  
-  
 }
 
 @media (min-width: 768px) and (max-width: 1024px) { 
     /*Tablet landscape*/
-  .logo {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-  }
-
-  #a {
-    display: inline;
-    float: right;
-    margin-top: 10px;
-    margin-left: 30px;
-  }
-
-  #b {
-    display: inline;
-    float: right;
-    margin-top: 10px;
-    margin-left: 30px;
-  }
-
-  #c {
-    display: inline;
-    float: right;
-    margin-top: 10px;
-    margin-right: 10px;
-  }
-
-  #d {
-    display: inline;
-    float: right;
-    margin-top: 10px;
-    margin-right: 30px;
-  }
-
-  .head {
-    padding-top: 65px !important;
-  }
-
-  nav {
-    padding-bottom: 20px;
-  }
-  
-  .h1 {
-    color: #000000 !important;
-  }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -665,7 +618,7 @@ nav ul li:hover {
 
   .sec1 {
     grid-template-columns: 1fr !important;
-    grid-template-rows: 100px 250px 220px !important;
+    grid-template-rows: 100px auto auto !important;
   }
 
   .sec1 h1 {
@@ -961,27 +914,28 @@ footer {
   display: grid;
   margin: 20px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 100px 1fr;
 }
 
 .sec1 img{
+  justify-self: center;
   align-self: center;
-  width: 100%;
+  width: 40%;
   height: auto;
   grid-column: 2/2;
-  grid-row: 1/3;
+  grid-row: 1/4;
 }
 
 .sec1 p {
   margin: 0 15% 0 15%;
   grid-column: 1/1;
-  grid-row: 2/2;
+  grid-row: 2/4;
 }
 
 .sec1 h1 {
   grid-column: 1/1;
   grid-row: 1/1;
-  align-self: end;
+  align-self: center;
 }
 
 .sec2 {
