--- a/css/nav.css
+++ b/css/nav.css
@@ -266,6 +266,15 @@ nav ul li:hover {
   #open {
     display: none;
   }
+
+  .arrow {
+    border: solid black;
+    border-width: 0 2px 2px 0;
+    display: inline-block;
+    padding: 3px;
+    margin-left: 2px;
+    margin-bottom: 2px;
+  }
   @media (min-width: 1025px) and (max-width: 1280px) {
     /*Tablet portrait*/
     #open {
