--- a/css/chw.css
+++ b/css/chw.css
@@ -206,17 +206,17 @@ footer {
 }
 
 .sec2 {
-    margin-top: 50px;
+    margin: 50px 20px 20px 20px;
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 33% 33% 33%;
     grid-template-rows: auto auto;
     align-items: center;
     justify-items: center;
 }
 
-.sec2 img {
-    
+.sec2 p {
+    margin: 0 20px 0 20px;
 }
 
 .shp {
