--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -162,6 +162,7 @@ footer {
 }
 
 .sec2 {
+  height: 100vh;
   padding: 150px 0 150px 0;
 }
 
@@ -175,7 +176,7 @@ footer {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   font-size: 18px;
-  margin: 20px 100px 20px 100px;
+  margin: 80px 400px 120px 400px;
 }
 
 header.solid {
